added the hint system for instructor and admin

--- a/templates/administration/sheet/add_new_question.html
+++ b/templates/administration/sheet/add_new_question.html
@@ -99,6 +99,13 @@ active
                                     placeholder="Description here..." required></textarea>
                             </div>
 
+                            <div class="mb-3">
+                                <label for="job_title" class="form-label">Hint <small>(optional)</small>
+                                </label>
+                                <textarea class="form-control" id="question_description" name="hint" rows="3"
+                                    placeholder="Hint here..."></textarea>
+                            </div>
+
 
                             <div class="mb-3">
                                 <label for="assignment_type" class="form-label">Difficulty Level
