--- a/templates/instructor/sheet/edit_question.html
+++ b/templates/instructor/sheet/edit_question.html
@@ -107,6 +107,21 @@ active
                                         >{{ question.output_format }}</textarea>
                                 </div>
 
+                                <div class="mb-3">
+                                    <label for="job_title" class="form-label">Constraints
+                                        <div class="star">*</div>
+                                    </label>
+                                    <textarea class="form-control" id="question_description" name="constraints" rows="5"
+                                        placeholder="Description here..." required>{{ question.constraints }}</textarea>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="job_title" class="form-label">Hint <small>(optional)</small>
+                                    </label>
+                                    <textarea class="form-control" id="question_description" name="hint" rows="3"
+                                        placeholder="Hint here...">{{ question.hint }}</textarea>
+                                </div>
+
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="mb-3">
