--- a/templates/administration/all_students.html
+++ b/templates/administration/all_students.html
@@ -168,7 +168,7 @@ Administration -> Students
 
                     <td class="border-bottom-0">
                         <img src="${student.profile_pic}" alt="Profile Picture"
-                            class="rounded-circle student-profile-pic" width="40" height="40"
+                            class="rounded-circle student-profile-pic cursor-pointer" width="40" height="40"
                             data-bs-toggle="modal" data-bs-target="#profilePicModal" 
                             onclick="showProfilePic('${student.profile_pic}')">
                     </td>
